--- a/changelog/breaking-changes-and-migration/upgrade-guides.mdx
+++ b/changelog/breaking-changes-and-migration/upgrade-guides.mdx
@@ -1,201 +1,186 @@
 ---
 title: "Upgrade Guides"
-description: "Practical, step-by-step instructions for upgrading your codebase between major GoogleTest and GoogleMock versions. Covering common pitfalls, best practices, and sample migration workflows, these guides ease the adoption of new releases."
+description: "Step-by-step instructions and best practices for upgrading between major and minor GoogleTest versions. Addresses common pain points, migration tooling, and ways to validate code stability post-upgrade."
 ---
 
 # Upgrade Guides
 
-Practical, step-by-step instructions for upgrading your codebase between major GoogleTest and GoogleMock versions. This document focuses exclusively on helping users navigate common pitfalls, adopt new idioms, and apply best practices to ensure smooth migration during major version upgrades.
+Step-by-step instructions and best practices for upgrading between major and minor GoogleTest versions. Addresses common pain points, migration tooling, and ways to validate code stability post-upgrade.
 
 ---
 
-## 1. Understanding the Upgrade Path
+## Introduction
 
-Upgrading between major releases of GoogleTest and GoogleMock can introduce significant changes that affect your test code, mocking constructs, and build configurations. This guide empowers you to confidently update your codebase by:
+Upgrading GoogleTest across major and minor versions can bring powerful new features, bug fixes, and performance improvements to your testing suite. However, transitions between versions may introduce breaking changes or subtle behavioral differences that require your attention.
 
-- Explaining what typically changes in major versions
-- Highlighting common user pain points during upgrades
-- Providing actionable workflows to transition your projects
-
-Note: This guide targets user-facing changes, not internal implementation details. It complements the detailed breaking changes and deprecation notices documented elsewhere.
-
-
-## 2. Key Considerations When Upgrading
-
-### 2.1 C++ Standard Compatibility
-
-The recent GoogleTest versions **require at least C++17**. Ensure your build system specifies this minimum to avoid build failures:
-
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
-
-If your project currently targets an earlier standard, upgrade your compiler settings before migrating GoogleTest/GoogleMock.
-
-
-### 2.2 Mock Method Declaration Syntax Changes
-
-GoogleMock’s syntax for declaring mock methods has evolved to better support qualifiers like `noexcept` and ref-qualifiers. When upgrading:
-
-- Verify all `MOCK_METHOD` declarations in your mocks meet the new syntax introduced in later major releases.
-- Adjust older mock method macros to the updated form, ensuring explicit declaration of method qualifiers.
-
-Example before:
-
-```cpp
-MOCK_METHOD(int, Foo, (int x));
-```
-
-Might require updating to:
-
-```cpp
-MOCK_METHOD(int, Foo, (int x), (const, noexcept));
-```
-
-Check the latest mocking framework reference and [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for exact syntax details.
-
-
-### 2.3 Behavioral Changes in Expectations and Uninteresting Calls
-
-Expectations set via `EXPECT_CALL` and default actions defined by `ON_CALL` have subtle semantic adjustments. These changes may:
-
-- Affect how frequently calls are verified and reported
-- Modify the handling of unexpected or uninteresting calls
-
-To avoid surprises:
-
-- Audit your tests for suppressed warnings or ignored mock calls.
-- Use the verbose mock mode flag (`--gmock_verbose=info`) during test runs to identify unexpected behavior.
-- Adjust cardinalities and mock strictness as needed.
-
-
-### 2.4 Death Test Handling in Multi-threaded Contexts
-
-Upgraded releases enhance safety and correctness of death tests when run in multithreaded environments.
-
-- Review your death tests to ensure they do not rely on unsafe global state or timing assumptions.
-- Follow recommended practices for writing thread-safe death tests as detailed in the GoogleTest Primer and advanced guides.
-
-
-## 3. Step-by-Step Upgrade Workflow
-
-### Step 1: Update Build Environment
-
-- Confirm your compiler supports at least C++17.
-- Update build system files (`CMakeLists.txt`, Bazel build files) to require C++17.
-- Clean and rebuild all test binaries to catch compiler or linker issues early.
-
-
-### Step 2: Sync GoogleTest and GoogleMock Dependencies
-
-- Use matching major/minor version tags for GoogleTest and GoogleMock to prevent incompatibilities.
-- If integrated as submodules or fetched during build, update hashes and versions accordingly.
-
-
-### Step 3: Modify Mock Classes
-
-- Revisit all `MOCK_METHOD` macros in your mocks.
-- Add missing qualifiers or update macro usage according to the new API.
-- Replace any deprecated mock constructs.
-
-
-### Step 4: Verify and Adjust Test Expectations
-
-- Run all tests with verbose mocking output enabled.
-- Diagnose unexpected or missing calls.
-- Adjust call cardinalities (`Times()`, `AtLeast()`, `AnyNumber()`) as appropriate.
-- Address any broken sequences or ordering dependencies.
-
-
-### Step 5: Audit Death Tests
-
-- Confirm death tests pass consistently under your environment.
-- Refactor tests relying on unsafe timing assumptions or shared state.
-
-
-### Step 6: Run Full Test Suite and Address Failures
-
-- Run all tests and watch for new failures or unexpected warnings.
-- Use failure messages to identify migration issues.
-- Document any workarounds or temporary adjustments needed.
-
-
-## 4. Common Pitfalls and How to Avoid Them
-
-### Problem: Build Failures Due to Missing C++17
-
-- **Solution**: Explicitly set C++17 standard in your build configuration.
-
-### Problem: Mock Methods Not Recognized or Failing to Compile
-
-- **Solution**: Update the `MOCK_METHOD` declarations with required qualifiers and syntax.
-
-### Problem: Unexpected Calls Failing Tests
-
-- **Solution**: Use verbose mock logging to detect mismatches; adjust `EXPECT_CALL` strictness or cardinalities.
-
-### Problem: Death Tests Fail Intermittently
-
-- **Solution**: Ensure thread-safety and isolate death tests from shared global state.
-
-
-## 5. Best Practices for Smooth Upgrades
-
-- Keep GoogleTest and GoogleMock versions in sync to avoid subtle incompatibilities.
-- Regularly review the breaking changes document and upgrade guides with each release.
-- Use feature flags or macros provided to toggle behavior if you cannot immediately migrate certain tests.
-- Adopt continuous integration to catch upgrade issues early.
-- Leverage community resources, FAQs, and cookbooks for patterns and troubleshooting.
-
-
-## 6. Example Migration Snippet
-
-```cpp
-// Old style
-MOCK_METHOD(int, Calculate, (int x));
-
-// Updated style with qualifiers
-MOCK_METHOD(int, Calculate, (int x), (const, noexcept));
-```
-
-Run with increased mock verbosity:
-
-```
-./test_binary --gmock_verbose=info
-```
-
-Watch logs for unexpected calls and adjust tests accordingly.
-
-
-## 7. Troubleshooting Tips
-
-- **Linking errors**: Confirm both GoogleTest and GoogleMock are linked correctly.
-- **Unexpected mock calls**: Review call order, cardinalities, and default actions.
-- **Compiler errors on mock macros**: Check macro arguments and compiler compatibility with the new standard.
-- **Death test failures**: Isolate test cases, ensure no interference between threads.
-
-
-## 8. Additional Resources
-
-- [GoogleTest Breaking Changes](https://github.com/google/googletest/blob/main/changelog/breaking-changes-and-migration/breaking-changes.md)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [Mocking Reference](https://github.com/google/googletest/blob/main/reference/mocking.md)
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html)
-- [Common Setup Issues](https://github.com/google/googletest/blob/main/docs/common-setup-issues.md)
-
+This guide walks you through the process of upgrading GoogleTest with a focus on minimizing disruption and maximizing test stability. By following our structured approach, you'll gain confidence in your upgraded test environment and avoid common pitfalls.
 
 ---
 
-## Conclusion
+## Upgrade Workflow
 
-Upgrading your GoogleTest and GoogleMock test suite between major versions is a manageable process with the right guidance. By following this stepwise approach, focusing on compiler compatibility, mock method syntax, expectation adjustments, and death test safety, you will ensure your tests remain robust and maintainable. Keep abreast of official changelogs and best practices to minimize downtime and improve test quality.
+Upgrading GoogleTest involves several key steps to ensure your codebase remains functional and your tests continue to validate behavior as intended. This process is designed to incrementally guide users through from initial preparation to post-upgrade validation.
 
+<Steps>
+<Step title="Preparation and Version Review">
+Before upgrading, identify the current and target GoogleTest versions and review the corresponding release notes and upgrade instructions. Pay special attention to breaking changes, deprecated features, and new default behaviors that may affect your tests.
+</Step>
+<Step title="Migration Planning">
+Plan the upgrade strategy: decide whether to move incrementally through minor versions or upgrade directly to a major version. Assess your test coverage and note any test cases that may be affected by changes.
+</Step>
+<Step title="Codebase Update and Dependency Management">
+Update your build dependencies to point to the target GoogleTest version. For example, when using CMake, update fetch scripts or package versions accordingly. Validate that your build system correctly links against the new libraries.
+</Step>
+<Step title="Update Mock Classes and Expectations">
+If you use GoogleMock, review and update mock class definitions and set expectations. For example, migration may require converting legacy `MOCK_METHODn` macros to the new `MOCK_METHOD` macro syntax, ensuring proper usage of qualifiers like `(const, override)`, and handling changes in default mock behaviors.
+</Step>
+<Step title="Run Existing Tests and Observe Failures">
+Execute your entire test suite against the new version. Identify any failures or warnings related to mocks, expectations, or test logic.
+</Step>
+<Step title="Adapt Tests and Fix Issues">
+Modify failing tests to comply with the latest GoogleTest and GoogleMock syntax and semantics. This can include:
+- Adding explicit `ON_CALL` for mock methods to set default actions
+- Using `NiceMock` or `StrictMock` wrappers appropriately
+- Adjusting ordering constraints and cardinalities for expectations
+- Ensuring mock methods correctly override base methods with qualifiers
+</Step>
+<Step title="Perform Validation and Stability Checks">
+Run tests repeatedly to ensure stability and consistent results. Leverage verbosity flags such as `--gmock_verbose=info` for additional diagnostic details.
+</Step>
+<Step title="Complete Upgrade and Document Changes">
+Integrate the upgraded GoogleTest version into your main development branches. Document the upgrade steps, key changes, and any necessary ongoing maintenance.
+</Step>
+</Steps>
 
-<Check>
-Always back up your current working codebase before attempting any major upgrade.
-</Check>
+---
 
-<Note>
-This guide complements detailed breaking changes documentation; always consult both when migrating.
-</Note>
+## Common Upgrade Pain Points and Remedies
+
+### Migrating from Legacy Macros
+
+Older projects may use the deprecated `MOCK_METHODn` macros. It is strongly recommended to transition to the unified `MOCK_METHOD` macro, which improves code clarity and compatibility.
+
+**Example Migration**:
+
+```cpp
+// Legacy old syntax
+MOCK_METHOD1(Foo, bool(int));
+// New syntax
+MOCK_METHOD(bool, Foo, (int), (override));
+```
+
+### Handling Method Qualifiers
+
+Mock methods overriding `const`, `noexcept`, or methods with reference qualifiers must use corresponding specification in the `MOCK_METHOD` macro:
+
+```cpp
+MOCK_METHOD(bool, Bar, (int), (const, noexcept, override));
+MOCK_METHOD(int, Baz, (), (ref(&), override));
+```
+
+### Managing Uninteresting Calls
+
+Ensure mock expectations correctly reflect which methods can be called without explicit expectations. To suppress warnings for uninteresting calls, wrap mocks in `NiceMock`:
+
+```cpp
+using ::testing::NiceMock;
+NiceMock<MockFoo> mock_foo;
+```
+
+To enforce strict behavior, use `StrictMock`:
+
+```cpp
+using ::testing::StrictMock;
+StrictMock<MockFoo> mock_foo;
+```
+
+### Default Actions with `ON_CALL`
+
+`ON_CALL` is essential for setting the default behavior of mock methods not covered by `EXPECT_CALL`. This is especially important after upgrading to avoid unexpected warnings or failures.
+
+```cpp
+ON_CALL(mock_foo, Foo(_)).WillByDefault(Return(true));
+```
+
+### Expectation Ordering and Cardinality
+
+Transitions may cause changes in how expectations are matched or ordered. Review your `EXPECT_CALL` directives and sequences (`InSequence`) to make sure calls occur as expected.
+
+Use `.RetiresOnSaturation()` if you want expectations to deactivate after being met:
+
+```cpp
+EXPECT_CALL(mock_foo, Bar())
+    .Times(2)
+    .RetiresOnSaturation();
+```
+
+---
+
+## Migration Tooling
+
+To ease the upgrade, Google provides tooling and scripts (if available) to automate common migration tasks such as converting deprecated mocks macros to new syntax, applying proper qualifiers, and adding default actions.
+
+Refer to the GoogleTest GitHub repository and contribution documentation for up-to-date scripts.
+
+---
+
+## Validating Code Stability Post-Upgrade
+
+- Use the `--gmock_verbose=info` flag to get detailed logs of expectations and mock calls.
+- Run your full test suite multiple times to detect flaky failures.
+- Employ continuous integration to verify the upgrade under different environments.
+
+Check for:
+- Unexpected uninteresting call warnings or errors.
+- Changes in default return values caused by updates in `DefaultValue<T>` or `ON_CALL` defaults.
+- Order-sensitive test failures due to stricter call sequences or cardinalities.
+
+---
+
+## Best Practices for Smooth Upgrading
+
+- Keep GoogleTest and GoogleMock versions in sync.
+- Always set explicit default actions using `ON_CALL` for complex mocks.
+- Prefer `NiceMock` during normal development to reduce noise.
+- Reserve `StrictMock` for areas where strict interaction verification is crucial.
+- Avoid mocking classes you don’t own; instead, use adaptors.
+- Regularly review and refactor mocks and test code using the latest syntax.
+
+---
+
+## Troubleshooting
+
+<AccordionGroup title="Common Upgrade Issues">
+<Accordion title="Mock Methods Invoking Real Methods">
+This usually happens if mocked methods are not virtual or the signatures do not exactly match. Verify that all mock methods override virtual methods correctly with proper qualifiers.
+</Accordion>
+<Accordion title="Uninteresting Calls Warning Messages">
+Consider switching to `NiceMock` or setting default actions explicitly using ON_CALL to suppress warnings.
+</Accordion>
+<Accordion title="Compilation Failures on MOCK_METHOD Macros">
+Check for proper use of parentheses around template arguments that contain commas or consider using type aliases.
+</Accordion>
+<Accordion title="Unexpected Test Failures After Upgrade">
+Run tests with verbosity flags and carefully review expectation setup, especially call order and cardinalities.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## Additional Resources
+
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Detailed recipes and examples.
+- [Mocking Reference](../api-reference/mocking/mock-methods.md): Comprehensive API documentation for mocking.
+- [Breaking Changes](../changelog/breaking-changes-and-migration/breaking-changes.md): Important migration and breaking change details.
+- [Troubleshooting Common Issues](../getting-started/troubleshooting-validation/common-issues.md): Help for common upgrade and usage problems.
+
+---
+
+## Summary
+
+By following these upgrade guides, you ensure a smooth transition to newer versions of GoogleTest, preserving the stability and reliability of your tests while embracing new features and fixes. Carefully plan, test, and validate upgrades, and leverage GoogleMock best practices for mocking and expectations to reduce technical debt.
+
+---
+
+##### Source
+[Repository](https://github.com/google/googletest) branch: main
